# kpmg-assignment

./: .env.example  Meal Plan for tuesday.md  README.md  food_preferences 1.json  meal_prep 1.db  pyproject.toml
src/: __main__.py  agents.py  main.py  tasks.py
src/routes/: meals.py
src/schemas/: meals.py
src/services/: agent.py  agents.py  crewai.py  crewai_first_solution.py  tasks.py
src/services/tools/: calories.py  database.py  food_api_client.py  food_client.py  user_preferences.py
src/tools/: database.py  food_api_client.py
