[project]
name = "kpmg-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "colorama>=0.4.6",
    "crewai>=0.193.2",
    "crewai-tools>=0.73.1",
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "langchain>=0.3.27",
    "langchain-ibm>=0.3.18",
    "langgraph>=0.6.7",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]
